Resolved issue with wallet transaction table (#4661)
* fix: resolved issue with wallet tx page

* fix resolved distorted ui on transactions table

* fix: changed suggested ui by manu

* fix: resolved failing unit testj

--- a/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
+++ b/src/modules/transaction/components/TransactionDetailRow/TransactionDetailRow.css
@@ -57,6 +57,11 @@
     font-weight: var(--font-weight-semi-bold);
     font-size: var(--font-size-h6);
   }
+
+  & a {
+    color: var(--color-ultramarine-blue);
+    text-decoration: none;
+  }
 }
 
 .expandToggle {
@@ -150,4 +155,9 @@
     color: var(--color-tx-fail-status-text);
     background-color: var(--color-tx-fail-status-bg);
   }
+}
+
+.copyIcon {
+  margin-left: -17px;
+  width: 20px;
 }
